--- a/0x00-html_advanced/styleguide.html
+++ b/0x00-html_advanced/styleguide.html
@@ -233,10 +233,12 @@
         <h2>Iframe</h2>
       </header>
       <div>
-        <iframe src="https://www.youtube.com/embed/41N6bKO-NVI" title="ALX" width="350px" height="200px">ALX
-          Sally</iframe>
+        <iframe title="ALX" width="350" height="200" src="https://www.youtube.com/embed/41N6bKO-NVI">
+          ALX Sally
+        </iframe>
       </div>
     </section>
+
   </main>
   <footer></footer>
 </body>
